Remove endpoint api/v1/user
